fix dumb bugs
